# cc-context-usage

./: .gitignore  LICENSE  NOTICE  README.ja.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
scripts/: install-cli.sh  install-desktop.ps1  statusline-wrapper.sh  uninstall-cli.sh  uninstall-desktop.ps1
src/cc_context/: __init__.py  audit_source.py  cli.py  core.py  desktop.py  dump_source.py  limits.json
tests/: conftest.py  test-install-cli.sh  test-uninstall-cli.sh  test_audit_source.py  test_cli.py  test_core.py  test_desktop.py  test_dump_source.py
